<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.efcs.conecta4.AcercaDe"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/nombre"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_name"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/version"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/_1_0"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/contacto"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/correo"
        android:textSize="15sp" />


</LinearLayout>
